fix splitpane causing scrollbars to appear

--- a/src/ui/components/AppContent.css
+++ b/src/ui/components/AppContent.css
@@ -1,4 +1,9 @@
 
+/* not sure why but this causes content to be too big and scrollbars to appear */
+.SplitPane {
+  position: static !important;
+}
+
 /* https://github.com/tomkp/react-split-pane example styling */
 
 .Resizer {
